// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarContent renders error 1`] = `
<WithStyles(ForwardRef(SnackbarContent))
  action={
    Array [
      <WithStyles(ForwardRef(IconButton))
        className="makeStyles-close-1"
        color="inherit"
        onClick={[MockFunction]}
      >
        <Memo(CloseIcon)
          className="makeStyles-icon-9"
        />
      </WithStyles(ForwardRef(IconButton))>,
    ]
  }
  className="makeStyles-error-3"
  message={
    <span
      className="makeStyles-content-10"
    >
      <Memo(ErrorIcon)
        className="makeStyles-icon-9"
        size={20}
      />
      <span
        className="makeStyles-message-11"
      >
        test snackbar
      </span>
    </span>
  }
/>
`;

exports[`SnackbarContent renders fullWidth 1`] = `
<WithStyles(ForwardRef(SnackbarContent))
  action={
    Array [
      <WithStyles(ForwardRef(IconButton))
        className="makeStyles-close-1"
        color="inherit"
        onClick={[MockFunction]}
      >
        <Memo(CloseIcon)
          className="makeStyles-icon-9"
        />
      </WithStyles(ForwardRef(IconButton))>,
    ]
  }
  className="makeStyles-success-2 makeStyles-fullWidth-8"
  message={
    <span
      className="makeStyles-content-10"
    >
      <Memo(CheckCircleIcon)
        className="makeStyles-icon-9"
        size={20}
      />
      <span
        className="makeStyles-message-11"
      >
        test snackbar
      </span>
    </span>
  }
/>
`;

exports[`SnackbarContent renders info 1`] = `
<WithStyles(ForwardRef(SnackbarContent))
  action={
    Array [
      <WithStyles(ForwardRef(IconButton))
        className="makeStyles-close-1"
        color="inherit"
        onClick={[MockFunction]}
      >
        <Memo(CloseIcon)
          className="makeStyles-icon-9"
        />
      </WithStyles(ForwardRef(IconButton))>,
    ]
  }
  className="makeStyles-info-4"
  message={
    <span
      className="makeStyles-content-10"
    >
      <Memo(InfoIcon)
        className="makeStyles-icon-9"
        size={20}
      />
      <span
        className="makeStyles-message-11"
      >
        test snackbar
      </span>
    </span>
  }
/>
`;

exports[`SnackbarContent renders loading 1`] = `
<WithStyles(ForwardRef(SnackbarContent))
  action={Array []}
  className="makeStyles-loading-5"
  message={
    <span
      className="makeStyles-content-10"
    >
      <WithStyles(ForwardRef(CircularProgress))
        className="makeStyles-icon-9 makeStyles-loadingIcon-6"
        size={20}
      />
      <span
        className="makeStyles-message-11"
      >
        test snackbar
      </span>
    </span>
  }
/>
`;

exports[`SnackbarContent renders success 1`] = `
<WithStyles(ForwardRef(SnackbarContent))
  action={
    Array [
      <WithStyles(ForwardRef(IconButton))
        className="makeStyles-close-1"
        color="inherit"
        onClick={[MockFunction]}
      >
        <Memo(CloseIcon)
          className="makeStyles-icon-9"
        />
      </WithStyles(ForwardRef(IconButton))>,
    ]
  }
  className="makeStyles-success-2"
  message={
    <span
      className="makeStyles-content-10"
    >
      <Memo(CheckCircleIcon)
        className="makeStyles-icon-9"
        size={20}
      />
      <span
        className="makeStyles-message-11"
      >
        test snackbar
      </span>
    </span>
  }
/>
`;

exports[`SnackbarContent renders warning 1`] = `
<WithStyles(ForwardRef(SnackbarContent))
  action={
    Array [
      <WithStyles(ForwardRef(IconButton))
        className="makeStyles-close-1"
        color="inherit"
        onClick={[MockFunction]}
      >
        <Memo(CloseIcon)
          className="makeStyles-icon-9"
        />
      </WithStyles(ForwardRef(IconButton))>,
    ]
  }
  className="makeStyles-warning-7"
  message={
    <span
      className="makeStyles-content-10"
    >
      <Memo(WarningIcon)
        className="makeStyles-icon-9"
        size={20}
      />
      <span
        className="makeStyles-message-11"
      >
        test snackbar
      </span>
    </span>
  }
/>
`;
